Fix Eclipse project and clean up some warnings it was generating