@@ -14,6 +14,7 @@
  */
 package hlaunit.ieee1516e.federation;
 
+import java.net.URI;
 import java.net.URL;
 
 import hla.rti1516e.exceptions.CouldNotCreateLogicalTimeFactory;
@@ -139,7 +140,7 @@ public class CreateFederationTest extends Abstract1516eTest
 		// attempt to create with invalid fom URL //
 		try
 		{
-			URL url = new URL( "http://localhost/dummyURL" );
+			URL url = new URI("http://localhost/dummyURL").toURL();
 			defaultFederate.rtiamb.createFederationExecution( defaultFederate.simpleName, url );
 			Assert.fail( "No exception while creating federation with invalid FOM (invalid URL)" );
 		}
